attempt at fixing parallax on mobile screen

--- a/styles/global.css
+++ b/styles/global.css
@@ -122,6 +122,12 @@ body {
     background-size: cover;
 }
 
+@media only screen and (max-width: 576px) {
+    .parallax {
+        background-size: contain;
+    }
+}
+
 /* font-sizing */
 
 .f1 {
